[package]
name = "coderhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
serde = { version = "*", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }

